--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="base.css">
     <script src="js.js"></script>
+    <script src="es.js"></script>
 </head>
 <body>
 <header>
     <h1>VIMEE UI IoT</h1>
 </header>
 
-<fieldset>
+<fieldset id="J_ca">
     <legend>Control Area</legend>
-    <div class="tips">Control Area</div>
+    <dl class="bp gp-1"></dl>
 </fieldset>
 
 <fieldset class="ls ls-ar">
@@ -23,13 +24,14 @@
         <li><a class="it" href="in.html">Information</a></li>
         <li><a class="it" href="rf.html">Firmware Upgrade</a></li>
         <li class="le"><a class="it sr J-cf" data-tips="Restart?" href="rs.html">Restart</a></li>
-        <li class="le"><a class="it" style="color:#00979d" href="mods.html">Control Area Modules</a></li>
+        <li class="le"><a class="it" style="color:#00979d" href="demos.html">Control Area Modules</a></li>
     </ul>
     <p class="bp"><a class="btn btn-w" href="ot.html">Exit</a></p>
 </fieldset>
 
 <script>
-cfm();
+es.ael = qs("#J_ca dl");
+wsa("wss://honglei.net/ws", es.ws);
 </script>
 </body>
 </html>
