--- a/wc.html
+++ b/wc.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>VIMEE UI IoT</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="base.css">
     <script src="js.js"></script>
