--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <fieldset id="J_ca">
     <legend>Control Area</legend>
-    <dl class="bp gp-1"></dl>
+    <div class="tips">HTML</div>
 </fieldset>
 
 <fieldset class="ls ls-ar">
