--- a/oc.html
+++ b/oc.html
@@ -18,7 +18,7 @@
         <p><em>Web User</em><input type="text" name="user" value=""></p>
         <p><em>Web Password</em><input type="text" name="pass" value=""></p>
         <p><em>Apikey</em><input type="text" name="apikey" value=""></p>
-        <p><em>NTP Server</em><input type="text" name="ntp" value="ha.honglei.net"></p>
+        <p><em>NTP Server</em><input type="text" name="ntp" value=""></p>
         <p><button type="submit">Submit</button></p>
     </form>
 </fieldset>
